changed some styles (now we've bigger social icons for example) and fixed I some bugs (like a white gap in the right when a mobile is used)

--- a/css/main.css
+++ b/css/main.css
@@ -13,7 +13,7 @@ h4 {
 .navbar-brand {
     color:white;
     font-family: montserrat, sans-serif;  
-    font-weight: 700;    
+    font-weight: 600;    
     font-style: normal;
     letter-spacing: 1px;
     
@@ -52,8 +52,16 @@ header {
 }
 #coderBunkerSentence h1 {
     font-family: montserrat, sans-serif;
-    font-weight: 600;
-    border-radius: 10px;
+    font-weight: 700;
+    font-style:normal;
+    margin-bottom:2rem;
+
+}
+#coderBunkerSentence p {
+    font-family: montserrat, sans-serif;
+    font-weight: 400;
+    font-style:normal;
+    margin-bottom:2rem;
 
 }
 #coderBunkerSentence button {
@@ -217,6 +225,9 @@ p.proposal-text{
     color:#e74c3c;
     font-size: 4vw;
 }
+.fa-facebook-f, .fa-linkedin, .fa-weixin, .fa-medium {
+    font-size: 1.5vw;
+}
 /* Styles needed for menu effect */
 li {
 
@@ -244,3 +255,6 @@ ul.navbar-nav .nav-item a:hover:after {
   left: 0;
   text-shadow: 0 0 .65px #FFF, 0 0 .65px #FFF;
 }
+
+
+/* testing css for menu*/
